// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/popover/demo/arrow-point-at-center.md correctly 1`] = `
<div>
  <button
    class="c7n-btn c7n-btn-flat"
    type="button"
  >
    <span>
      Align edge / 边缘对齐
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-btn c7n-btn-flat"
    type="button"
  >
    <span>
      Arrow points to center / 箭头指向中心
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
</div>
`;

exports[`renders ./components/popover/demo/basic.md correctly 1`] = `
<button
  class="c7n-btn c7n-btn-primary c7n-btn-flat"
  type="button"
>
  <span>
    Hover me
  </span>
  <div
    class="c7n-ripple-wrapper"
  />
</button>
`;

exports[`renders ./components/popover/demo/control.md correctly 1`] = `
<button
  class="c7n-btn c7n-btn-primary c7n-btn-flat"
  type="button"
>
  <span>
    Click me
  </span>
  <div
    class="c7n-ripple-wrapper"
  />
</button>
`;

exports[`renders ./components/popover/demo/placement.md correctly 1`] = `
<div
  class="demo"
>
  <div
    style="margin-left:70px;white-space:nowrap"
  >
    <button
      class="c7n-btn c7n-btn-flat"
      type="button"
    >
      <span>
        TL
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-btn c7n-btn-flat"
      type="button"
    >
      <span>
        Top
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-btn c7n-btn-flat"
      type="button"
    >
      <span>
        TR
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
  </div>
  <div
    style="width:70px;float:left"
  >
    <button
      class="c7n-btn c7n-btn-flat"
      type="button"
    >
      <span>
        LT
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-btn c7n-btn-flat"
      type="button"
    >
      <span>
        Left
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-btn c7n-btn-flat"
      type="button"
    >
      <span>
        LB
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
  </div>
  <div
    style="width:70px;margin-left:304px"
  >
    <button
      class="c7n-btn c7n-btn-flat"
      type="button"
    >
      <span>
        RT
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-btn c7n-btn-flat"
      type="button"
    >
      <span>
        Right
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-btn c7n-btn-flat"
      type="button"
    >
      <span>
        RB
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
  </div>
  <div
    style="margin-left:70px;clear:both;white-space:nowrap"
  >
    <button
      class="c7n-btn c7n-btn-flat"
      type="button"
    >
      <span>
        BL
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-btn c7n-btn-flat"
      type="button"
    >
      <span>
        Bottom
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-btn c7n-btn-flat"
      type="button"
    >
      <span>
        BR
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components/popover/demo/triggerType.md correctly 1`] = `
<div>
  <button
    class="c7n-btn c7n-btn-flat"
    type="button"
  >
    <span>
      Hover me
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-btn c7n-btn-flat"
    type="button"
  >
    <span>
      Focus me
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-btn c7n-btn-flat"
    type="button"
  >
    <span>
      Click me
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
</div>
`;
